# quant

./: .env.example  .gitignore  .tmp_rankings.html  .tmp_top.html  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  vercel.json
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260309_0001_create_core_tables.py  20260309_0002_add_symbol_identity_fields.py  20260309_0003_create_filing_facts.py  20260309_0004_recommendation_uniqueness.py  20260314_0005_add_stock_comments.py
apps/api/src/api/: batch_jobs.py  config.py  db.py  jobs.py  main.py  models.py  schemas.py
apps/web/: .env.example  README.md  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  (+1 more)
docs/: README.md  cloudflare-tunnel.md  local-development.md  operations.md
infra/docker/: api.Dockerfile  web.Dockerfile
infra/nginx/: README.md
infra/scripts/: _job_common.sh  bootstrap.sh  cron.daily  cron_filing_sync.sh  cron_materializer.sh  cron_price_sync.sh  cron_recommendation_refresh.sh  cron_scoring.sh  cron_symbol_sync.sh
scripts/local/: Invoke-Migrations.ps1  Run-DataPipeline.ps1  Setup-LocalDev.ps1  Start-Api.ps1  Start-Backend.ps1  Start-LocalDb.ps1  Start-Web.ps1  Stop-LocalDb.ps1
scripts/ops/: Register-OperationsTasks.ps1  Run-BackendProduction.ps1  Run-CloudflareTunnel.ps1  Run-DataPipelineProduction.ps1  Start-BackendProductionBackground.ps1  Unregister-OperationsTasks.ps1
scripts/tunnel/: Install-Cloudflared.ps1  Start-CloudflareTunnel.ps1  Start-CloudflareTunnelBackground.ps1
(+11 files in other folders)
