[project]
name = "quant-api"
version = "0.1.0"
description = "FastAPI backend for quant research platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.31.0,<1.0.0",
  "sqlalchemy>=2.0.35,<3.0.0",
  "alembic>=1.13.3,<2.0.0",
  "psycopg[binary]>=3.2.3,<4.0.0",
  "pydantic-settings>=2.5.2,<3.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
